# llm_and_vector_database

./: .dockerignore  .gitignore  Readme.md  app_chat.py  app_doc.py  app_interface.py  docker-compose.yml  dockerfile_api_chat  dockerfile_api_doc  dockerfile_app_interface  pyproject.toml  requirements.txt
data/: base_dados.txt  base_dados_2.txt
notebooks/: projeto_config.ipynb  read_pdf.ipynb
src/functions/: document_to_vectorstore.py  question_answer.py
src/utils/: vector_database.py
